--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<% @book.each do |book| %>
+<div>
+  <%= image_tag post_image.get_image %>
+  <p><%= image_tag 'sample-author1.jpg' %></p>
+  <p><%= post_image.user.name %></p>
+  <p><%= post_image.title %></p>
+  <p><%= post_image.body %></p>
+</div>
+<% end %>
