--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,26 @@
       </nav>
     </header>
     <main class="mb-auto">
-    <%= yield %>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <h1>New Book</h1>
+            <%= form_with model: @book do |f| %>
+              <h4>Title</h4>
+              <%= f.text_field :title %>
+
+              <h4>Opinion</h4>
+              <%= f.text_area :body %>
+
+              <%= f.submit 'Create Book' %>
+            <% end %>
+          </div>
+
+          <div class="col-md-8 offset-md-1">
+            <%= yield %>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="bg-dark text-white pt-5 pb-4">
       <div class="container mt-5">
