[Update]booksページレイアウト

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,5 @@
+<%= render 'list', user: @user, book: @book %>
+
 <div>
   <p><%= image_tag 'sample-author1.jpg' %></p>
   <p><%= @book.user.name %></p>
