--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,24 @@
-<%= render 'list', user: @user, book: @book %>
 
-<div>
-  <p><%= image_tag 'sample-author1.jpg' %></p>
-  <p><%= @book.user.name %></p>
-  <p><%= @book.title %></p>
-  <p><%= @book.body %></p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+
+    <%= render 'books/list', user: @user, book: @book %>
+
+    <div class="col-md-8 offset-md-1">
+      <h2>Books detail</h2>
+      <table class="table table-hover table-inverse">
+        <tbody>
+          <tr>
+            <td>
+              <%= image_tag @user.get_profile_image(100,100) %><br>
+              <%= @book.user.name %>
+            </td>
+            <td><%= @book.title %></td>
+            <td><%= @book.body %></td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+  </div>
 </div>
