--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,7 +11,9 @@
           <tr>
             <td>
               <%= image_tag @user.get_profile_image(100,100) %><br>
-              <%= @book.user.name %>
+              <%= link_to @book.user do %>
+                <%= @book.user.name %>
+              <% end %>
             </td>
             <td><%= @book.title %></td>
             <td><%= @book.body %></td>
