--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,10 @@
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
             <li class="nav-item">
-              <%= link_to 'マイページ', user_path(current_user.id) %>
+              <%= link_to 'Home', user_path(current_user.id) %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Users', users_path %>
             </li>
             <li class="nav-item">
                 <%= link_to 'Books', books_path %>
