--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,26 +5,21 @@
     <%= render 'books/list', user: @user, book: @book %>
 
     <div class="col-md-8 offset-md-1">
-      <h2>Books</h2>
+      <h2>Users</h2>
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
-            <th></th>
-            <th>Title</th>
-            <th>Opinion</th>
+            <th>Image</th>
+            <th>name</th>
             <th colspan="3"></th>
           </tr>
         </thead>
         <tbody>
-          <% @books.each do |book| %>
+          <% @users.each do |user| %>
             <tr>
               <td><%= image_tag @user.get_profile_image(100,100) %></td>
-              <td>
-                <%= link_to book_path(book.id) do %>
-                  <%= book.title %>
-                <% end %>
-              </td>
-              <td><%= book.body %></td>
+              <td><%= user.name %></td>
+              <td><%= link_to "Show", user %></td>
             </tr>
           <% end %>
         </tbody>
