--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,6 +17,10 @@
             </td>
             <td><%= @book.title %></td>
             <td><%= @book.body %></td>
+            <td>
+              <a data-confirm="本当に消しますか？" class="btn btn-sm btn-danger destroy_book_31354" rel="nofollow" data-method="delete">Destroy</a>
+            </td>
+
           </tr>
         </tbody>
       </table>
