--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -15,7 +15,7 @@
   <p><%= link_to "プロフィール編集", edit_user_path(@user.id) %></p>
 
   <h2 class="mt-3">New Book</h2>
-  <%= form_with model: book do |f| %>
+  <%= form_with model: @book do |f| %>
     <h4>Title</h4>
     <%= f.text_field :title %>
 
