--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,35 +16,62 @@
     <header class="shadow-sm">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand p-3" href="/"></a>
+          <a class="navbar-brand p-3" href="/">
+            <span>Bookers</span>
+          </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-            <% if user_signed_in? %>
-            <li class="nav-item">
-              <%= link_to 'Home', user_path(current_user.id) %>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'Users', users_path %>
-            </li>
-            <li class="nav-item">
-                <%= link_to 'Books', books_path %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-            </li>
-            <% else %>
-            <li class="nav-item">
-              <%= link_to "新規登録", new_user_registration_path %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "ログイン", new_user_session_path %>
-            </li>
-            <% end %>
-            </ul>
+              <li>
+                <a class="nav-link text-light" href="/">
+                  <i class="fa-solid fa-house-user"></i>
+                  Home
+                </a>
+              </li>
+              <% if user_signed_in? %>
+              <li>
+                <a class="nav-link text-light" href="/users">
+                  <i class="fa-solid fa-users"></i>
+                  Users
+                </a>
+              </li>
+              <li>
+                <a class="nav-link text-light" href="/books">
+                  <i class="fa-solid fa-book-open"></i>
+                  Books
+                </a>
+              </li>
+              <li>
+                <a class="nav-link text-light" data-method="delete" href="/users/sign_out",>
+                  <i class="fa-solid fa-right-from-bracket"></i>
+                  Log out
+                </a>
+              </li>
+              <% else %>
+              <li>
+                <a class="nav-link text-light" href="/home/about",>
+                  <i class="fa-sharp fa-solid fa-link"></i>
+                  About
+                </a>
+              </li>
+              <li>
+                <a class="nav-link text-light" href="/users/sign_up",>
+                  <i class="fa-solid fa-user-plus"></i>
+                  Sign up
+                </a>
+              </li>
+              <li>
+                <a class="nav-link text-light" href="/users/sign_in",>
+                  <i class="fa-solid fa-right-to-bracket"></i>
+                  Log in
+                </a>
+              </li>
+
+              <% end %>
+              </ul>
           </div>
         </div>
       </nav>
@@ -53,7 +80,7 @@
       <p id="notice"></p>
       <%= yield %>
     </main>
-    <footer class="bg-dark text-white pt-5 pb-4">
+    <footer>
       <div class="container mt-5">
         <div class="row">
           <div class="mx-auto">
