--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,6 +18,9 @@
             <td><%= @book.title %></td>
             <td><%= @book.body %></td>
             <td>
+              <%= link_to("edit", edit_book_path(@book.id),{class: "btn btn-sm btn-success" }) %>
+            </td>
+            <td>
               <a data-confirm="本当に消しますか？" class="btn btn-sm btn-danger destroy_book_31354" rel="nofollow" data-method="delete">Destroy</a>
             </td>
 
