--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,19 +1,29 @@
+
+
 <div class="container">
   <div class="row">
     <div class= "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h1>Editing Book</h1>
       <%= form_with model: @book do |f| %>
+        <% if @book.errors.any? %>
+          <%= @book.errors.count %>error prohibited this obj from being saved:
+          <ul>
+            <% @book.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+          <% end %>
 
         <h4>Title</h4>
         <%= f.text_field :title %>
-        
+
         <h4>Option</h4>
         <%= f.text_area :body %>
-        
+
         <%= f.submit 'Update Book' %>
-        
+
       <% end %>
-      
+
       <%= link_to "Show", book_path(@book.id) %>
       |
       <a href="/books">Back</a>
