--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,14 @@
 
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
+      <% if @book.errors.any? %>
+        <%= @book.errors.count %>error prohibited this obj from being saved:
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
+        </ul>
+      <% end %>
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
