--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -12,12 +12,12 @@
     </tr>
   </table>
 
-  <p><%= link_to "プロフィール編集", edit_user_path(@user.id) %></p>
+  <p><%= link_to "プロフィール編集", edit_user_path(user.id) %></p>
 
-  <h2 class="mt-3">New Book</h2>
+  <h2 class="mt-3">New book</h2>
 
-  <%= form_with model: @book, local: true do |f| %>
-    <h4>Title</h4>
+  <%= form_with model: book  do |f| %>
+    <h4>title</h4>
     <%= f.text_field :title %>
 
     <h4>Opinion</h4>
