--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -29,7 +29,11 @@
         <tbody>
           <% @books.each do |book| %>
             <tr>
-              <td><%= image_tag @user.get_profile_image(100,100) %></td>
+              <td>
+                <%= link_to book.user do %>
+                  <%= image_tag @user.get_profile_image(100,100) %>
+                <% end %>
+              </td>
               <td>
                 <%= link_to book_path(book.id) do %>
                   <%= book.title %>
