--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,7 +8,7 @@
     <%= render 'books/list', user: @user, book: @book %>
 
     <div class="col-md-8 offset-md-1">
-      <h2>Books detail</h2>
+      <h2>Book detail</h2>
       <table class="table table-hover table-inverse">
         <tbody>
           <tr>
@@ -22,7 +22,7 @@
             <td><%= @book.body %></td>
             <% if @book.user == current_user %>
               <td>
-                <%= link_to("edit", edit_book_path(@book.id),{class: "btn btn-sm btn-success" }) %>
+                <%= link_to("編集", edit_book_path(@book.id),{class: "btn btn-sm btn-success" }) %>
               </td>
               <td>
                 <a data-confirm="本当に消しますか？" class="btn btn-sm btn-danger destroy_book_31354" rel="nofollow" data-method="delete">Destroy</a>
