--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,28 +1,21 @@
 
-<div class="col-md-3">
-  <h2>User info</h2>
-  <!-- ユーザーの詳細 -->
-  <%= image_tag user.get_profile_image(100,100) %>
-  <table class="table">
-    <tr>
-      <th>name <%= user.name %></th>
-    </tr>
-    <tr>
-      <th>introduction <%= user.introduction %></th>
-    </tr>
-  </table>
 
-  <p><%= link_to "プロフィール編集", edit_user_path(user.id) %></p>
 
-  <h2 class="mt-3">New book</h2>
+<h2 class="mt-3">New book</h2>
 
-  <%= form_with model: book  do |f| %>
-    <h4>title</h4>
-    <%= f.text_field :title %>
-
-    <h4>Opinion</h4>
-    <%= f.text_area :body %>
-
-    <%= f.submit 'Create Book' %>
-  <% end %>
-</div>
+<%= form_with model: book  do |f| %>
+  <div class="form-group">
+    <label for="book_title">Title</label><br>
+    <%= f.text_field :title, id:"inputTitle"%>
+  </div>
+  
+  <div class="form-group">
+    <label for="book_body">Opinion</label><br>
+    <%= f.text_area :body, id:"inputBody"%>
+  </div>
+  
+  <div class="form-group">
+    <%= f.submit 'Create Book',{class: "btn btn-success"} %>
+  </div>
+  
+<% end %>
