--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,10 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
 
-    <%= render 'books/list', user: @user, book: @book %>
+    <div class="col-md-3">
+       <%= render 'users/list', user: @user %>
+       <%= render 'books/list', book: @book %>
+    </div>
 
     <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
@@ -22,10 +25,10 @@
             <td><%= @book.body %></td>
             <% if @book.user == current_user %>
               <td>
-                <%= link_to("編集", edit_book_path(@book.id),{class: "btn btn-sm btn-success" }) %>
+                <%= link_to("Edit", edit_book_path(@book),{class: "btn btn-sm btn-success" }) %>
               </td>
               <td>
-                <a data-confirm="本当に消しますか？" class="btn btn-sm btn-danger destroy_book_31354" rel="nofollow" data-method="delete">Destroy</a>
+                <%= link_to("Destroy", book_path(@book),{method: :delete,date:{confirm: "本当に消しますか？"},class: "btn btn-sm btn-danger destroy_book_31354"}) %>
               </td>
             <% end %>
 
