--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -3,7 +3,7 @@
     <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
       <h1 class="px-3 mx-auto">
         Welcome to
-        <i class="fa-sharp fa-solid fa-book"></i>
+        <i class="fas fa-sharp fa-solid fa-book"></i>
         <strong>Bookers</strong>!!
       </h1>
     </div>
