--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -29,7 +29,7 @@
         </div>
 
         <div class="form-group">
-          <%= f.submit "変更を保存" %>
+          <%= f.submit "Update User" %>
         </div>
       <% end %>
     </div>
