--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,10 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
 
-    <%= render 'books/list', user: @user, book: @book %>
+    <div class="col-md-3">
+       <%= render 'users/list', user: @user %>
+       <%= render 'books/list', book: @book %>
+    </div>
 
     <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
