--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
 <div class="text-success">
   <%= flash[:notice] %>
 </div>
+
+<p id="notice"></p>
 <div class="container px-5 px-sm-0">
   <div class="row">
 
@@ -14,20 +16,20 @@
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
-            <th>Image</th>
+            <th>image</th>
             <th>name</th>
             <th colspan="3"></th>
           </tr>
         </thead>
-        <tbody>
-          <% @users.each do |user| %>
+        <% @users.each do |user| %>
+          <tbody>
             <tr>
-              <td><%= image_tag @user.get_profile_image(100,100) %></td>
+              <td><%= image_tag user.get_profile_image(100,100) %></td>
               <td><%= user.name %></td>
-              <td><%= link_to "Show", user %></td>
+              <td><%= link_to "Show", user_path(user) %></td>
             </tr>
-          <% end %>
-        </tbody>
+          </tbody>
+        <% end %>
       </table>
 
     </div>
