--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 
     <div class="col-md-3">
        <%= render 'users/list', user: @user %>
-       <%= render 'books/list', book: @book %>
+       <%= render 'books/list', book: @book_new %>
     </div>
 
     <div class="col-md-8 offset-md-1">
@@ -23,9 +23,12 @@
           </tr>
         </thead>
         <tbody>
-          <% @books.each do |book| %>
+          <% @user.books.each do |book| %>
             <tr>
-              <td><%= image_tag @user.get_profile_image(100,100) %></td>
+              <td>
+                <%= link_to user_path(book.user) do %>
+                  <%= image_tag @user.get_profile_image(100,100) %>
+                <% end %>
               <td>
                 <%= link_to book_path(book.id) do %>
                   <%= book.title %>
