--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,6 +35,7 @@
                 <% end %>
               </td>
               <td><%= book.body %></td>
+              <td><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></td>
             </tr>
           <% end %>
         </tbody>
