[Finish]課題4-respec完了

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
               <li>
                 <a class="nav-link text-light" data-method="delete" href="/users/sign_out",>
                   <i class="fas fa-solid fa-sign-out-alt"></i>
-                  Log out
+                  logout
                 </a>
               </li>
               <% else %>
@@ -63,13 +63,13 @@
               <li>
                 <a class="nav-link text-light" href="/users/sign_up",>
                   <i class="fas fa-solid fa-user-plus"></i>
-                  Sign up
+                  sign up
                 </a>
               </li>
               <li>
                 <a class="nav-link text-light" href="/users/sign_in",>
                   <i class="fas fa-solid fa-sign-in-alt"></i>
-                  Log in
+                  login
                 </a>
               </li>
 
