--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -40,7 +40,7 @@
               <% if @book.favorited_by?(current_user) %>
                 <p>
                   <%= link_to book_favorites_path(@book), method: :delete do %>
-                    <i class="fas fa-solid fa-heart"></i><%= @book.favorites.count %>
+                    <i class="fas fa-heart"></i><%= @book.favorites.count %>
                   <% end %>
                 </p>
                 <% else %>
