--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,6 +35,21 @@
                 <% end %>
               </td>
               <td><%= book.body %></td>
+                        <td>
+                <% if book.favorited_by?(current_user) %>
+                  <p>
+                    <%= link_to book_favorites_path(book), method: :delete do %>
+                      <i class="fas fa-heart"></i><%= book.favorites.count %>
+                    <% end %>
+                  </p>
+                  <% else %>
+                  <p>
+                    <%= link_to book_favorites_path(book), method: :post do %>
+                      <i class="fas fa-regular fa-heart"></i><%= book.favorites.count %>
+                    <% end %>
+                  </p>
+                <% end %>
+              </td>
               <td><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></td>
             </tr>
           <% end %>
