--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -34,7 +34,7 @@
             <tr>
               <td>
                 <%= link_to book.user do %>
-                  <%= image_tag @user.get_profile_image(100,100) %>
+                  <%= image_tag book.user.get_profile_image(100,100) %>
                 <% end %>
               </td>
               <td>
